# swift-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md
.github/workflows/: main.yaml
example/: Cargo.toml  build.rs
example/src/: build.rs  main.rs
example/swift-lib/: Package.resolved  Package.swift  README.md
example/swift-lib/src/: lib.swift
macros/: Cargo.toml
macros/src/: lib.rs
src/: build.rs  main.rs
src-rs/: autorelease.rs  build.rs  build_utils.rs  dark_magic.rs  externs.rs  lib.rs  objc.rs  swift.rs  swift_arg.rs  swift_ret.rs  test-build.rs
src-rs/types/: array.rs  data.rs  mod.rs  object.rs  scalars.rs  string.rs
src-swift/: lib.swift
src_rs/: build.rs  lib.rs
src_rs/build-utils/: Cargo.toml
src_rs/build-utils/src/: lib.rs
src_rs/build_utils/: Cargo.toml
src_rs/build_utils/src/: lib.rs
src_rs/swift-rs/: Cargo.toml
src_rs/swift-rs/src/types/: array.rs  data.rs
src_rs/types/: mod.rs  string.rs
src_swift/: lib.swift
tests/: test_bindings.rs  test_example.rs
tests/swift-pkg/: Package.swift  doctests.swift  lib.swift
