[package]
name = "swift-rs"
version = "0.3.0"
description = "Call Swift from Rust with ease!"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Brendonovich/swift-rs"
edition = "2018"
exclude=["/src-swift", "*.swift"]
build = "src-rs/test-build.rs"

[lib]
path = "src-rs/lib.rs"

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }

[dev-dependencies]
serial_test = "0.10"

[features]
default = ["build"]
build = ["serde", "serde_json"]
