[package]
name = "swift-rs"
version = "1.0.4"
description = "Call Swift from Rust with ease!"
authors = ["The swift-rs contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Brendonovich/swift-rs"
edition = "2021"
exclude=["/src-swift", "*.swift"]
build = "src-rs/test-build.rs"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src-rs/lib.rs"

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }

[dev-dependencies]
serial_test = "0.10"

[features]
default = []
build = ["serde", "serde_json"]
